fix the spacing again; add the icon + text as a button

--- a/redisinsight/ui/src/pages/home/components/database-list-component/styles.module.scss
+++ b/redisinsight/ui/src/pages/home/components/database-list-component/styles.module.scss
@@ -110,6 +110,19 @@ $breakpoint-l: 1400px;
   }
 }
 
-:global(.mt-10px){
-  margin-top: 10px !important;
+:global(.controlsPopoverContent) {
+  display: flex;
+  flex-direction: column;
+
+  & > div {
+    display: flex;
+
+    button {
+      flex: 1;
+      
+      :global(.euiButtonContent) {
+        justify-content: start;
+      }
+    }
+  }
 }
